Fixed some spacing issue with the banner and results section. Doing hamburger after doing tablet

--- a/static/mobile-styles.css
+++ b/static/mobile-styles.css
@@ -1,27 +1,5 @@
 /* All decoration and behavior removed from anchors, buttons, and lists
 ===================================================================== */
-@media only screen and (max-width: 479px) {
-  .do-item-list {
-    display: flex; /* Ensure the container is a flexbox */
-    flex-direction: column; /* Set the direction to column */
-    align-items: center; /* Center items horizontally */
-  }
-  .alt-banner-text {
-    margin-top: -50px;
-    margin-bottom: 55px;
-  }
-  .banner-button {
-    padding: 10px 20px;
-  }
-  .for-mobile {
-    margin-top: -160px;
-  }
-  .do-item-list {
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
 button {
   background: none;
   color: inherit;
@@ -87,6 +65,9 @@ body {
   padding: 0;
   /* remove gross scroll bars */
   scrollbar-width: none;
+  position: relative;
+  width: 100%;
+  margin: auto;
 }
 
 /* All backgrounds are 100% of the device and centered */
@@ -95,11 +76,12 @@ main,
 footer,
 section,
 .content-container {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: auto;
 }
 
 /* Content is 100% of device until it reaches 1000px */
@@ -124,14 +106,18 @@ body {
 
 /* HEADER
 ========================================= */
-header {
+.for-mobile {
   color: var(--color-white);
-  height: 800px;
-  border: 1px solid var(--color-banner-border);
+  height: 1000px;
+  overflow: hidden;
+  position: relative;
+  background-color: var(--color-blue);
 }
 
 header>img {
+  padding-left: 400px;
   position: absolute;
+  width: 1900px;
 }
 
 .banner {
@@ -143,7 +129,8 @@ header>img {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  margin-top: -320px;
+  height: 1200px;
 }
 
 .nav-bar {
@@ -153,7 +140,6 @@ header>img {
   align-items: center;
   width: 100%;
   height: 32px;
-  margin-top: 20px;
 }
 
 .nav-logo {
@@ -178,10 +164,12 @@ header>img {
   text-align: center;
   margin-bottom: 110px;
   height: 350px;
-  width: 63.7%;
+  width: 80%;
 }
 
-.banner-content>div {
+.alt-banner-text {
+  margin-top: -50px;
+  margin-bottom: 55px;
   text-align: center;
 }
 
@@ -202,6 +190,8 @@ header>img {
   font-weight: 700;
   font-size: 14px;
   display: inline-block;
+  padding: 10px 20px;
+  margin-bottom: 90px;
 }
 
 .banner-text {
@@ -263,12 +253,15 @@ header>img {
 /* RESULTS */
 .results-section {
   color: var(--color-white);
-  background-color: #D8D8D8;
-  height: 650px;
+  background-color: var(--color-blue);
+  width: 100%;
+  position: relative;
+  overflow: hidden;
 }
 
 .results-section>img {
   position: absolute;
+  top: 0;
 }
 
 .results-container {
@@ -280,17 +273,24 @@ header>img {
 }
 
 .results-title-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  width: 100%;
+  padding-top: 200px;
 }
 
 .results-title {
+  text-align: center;
   font-size: 32px;
   line-height: 37.5px;
-  margin-top: -165px;
 }
 
 .results-text {
-  width: 637px;
+  text-align: center;
+  width: 80%;
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
@@ -301,24 +301,23 @@ header>img {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  margin-left: -80px;
-  transform: scale(.8);
-  margin-top: -80px;
-  flex-wrap: wrap;
+  width: 100%;
+  margin-bottom: 60px;
 }
 
 .results-item {
   height: 190px;
   width: 190px;
   text-align: center;
-  transform: scale(.7);
-
+  margin: 40px;
+  position: relative;
 }
 
 .results-item>img {
   height: 190px;
   width: 190px;
   position: absolute;
+  right: 2px;
 }
 
 .results-item-percent,
@@ -326,7 +325,6 @@ header>img {
   position: relative;
   z-index: 1;
   top: 10%;
-  left: 50%;
 }
 
 .results-item-percent {
@@ -348,7 +346,6 @@ header>img {
 
 .contact-title {
   font-size: 32px;
-  margin-top: 100px;
 }
 
 .contact-form {
